--- a/post_curl3D/post_curl3D.vcxproj
+++ b/post_curl3D/post_curl3D.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{<%GUID%>}</ProjectGuid>
-    <RootNamespace><%NAME%></RootNamespace>
-    <ProjectName><%NAME%></ProjectName>
+    <ProjectGuid>{1d7c30ed-f66c-42d2-849d-ff4347907338}</ProjectGuid>
+    <RootNamespace>post_curl3D</RootNamespace>
+    <ProjectName>post_curl3D</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -97,13 +97,10 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ModuleDefinitionFile><%NAME%>.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>post_curl3D.def</ModuleDefinitionFile>
       <ProfileGuidedDatabase>
       </ProfileGuidedDatabase>
     </Link>
-	<PostBuildEvent>
-      <Command>copy /y "$(TargetPath)" "$(ProjectDir)..\.util\.apo\Plugins\$(TargetName).$(PROCESSOR_ARCHITECTURE).dll</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -117,13 +114,10 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ModuleDefinitionFile><%NAME%>.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>post_curl3D.def</ModuleDefinitionFile>
       <ProfileGuidedDatabase>
       </ProfileGuidedDatabase>
     </Link>
-	<PostBuildEvent>
-      <Command>copy /y "$(TargetPath)" "$(ProjectDir)..\.util\.apo\Plugins\$(TargetName).$(PROCESSOR_ARCHITECTURE).dll</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -139,13 +133,13 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <ModuleDefinitionFile><%NAME%>.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>post_curl3D.def</ModuleDefinitionFile>
       <ProfileGuidedDatabase>
       </ProfileGuidedDatabase>
     </Link>
     <PostBuildEvent>
       <Command>IF NOT EXIST "$(SolutionDir).output" MKDIR "$(SolutionDir).output"
-COPY /Y "$(TargetPath)" "$(SolutionDir).output\$(TargetName).$(PlatformShortName)$(TargetExt)</Command>
+COPY /Y "$(TargetPath)" "$(SolutionDir).output\$(TargetName).$(PlatformShortName)$(TargetExt)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -163,13 +157,13 @@ COPY /Y "$(TargetPath)" "$(SolutionDir).output\$(TargetName).$(PlatformShortName
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <ModuleDefinitionFile><%NAME%>.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>post_curl3D.def</ModuleDefinitionFile>
       <ProfileGuidedDatabase>
       </ProfileGuidedDatabase>
     </Link>
     <PostBuildEvent>
       <Command>IF NOT EXIST "$(SolutionDir).output" MKDIR "$(SolutionDir).output"
-COPY /Y "$(TargetPath)" "$(SolutionDir).output\$(TargetName).$(PlatformShortName)$(TargetExt)</Command>
+COPY /Y "$(TargetPath)" "$(SolutionDir).output\$(TargetName).$(PlatformShortName)$(TargetExt)"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -180,10 +174,10 @@ COPY /Y "$(TargetPath)" "$(SolutionDir).output\$(TargetName).$(PlatformShortName
     <ClInclude Include="apoplugin_msvc.h" />
     <ClInclude Include="apoplugin_msvc_novar.h" />
     <ClInclude Include="apoplugin_msvc_var.h" />
-	<ClInclude Include="<%NAME%>.h" />
+	<ClInclude Include="post_curl3D.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="<%NAME%>.def" />
+    <None Include="post_curl3D.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
